python-app/k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-python-app
spec:
  selector:
    app: istio-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
