python-app/k8s/base/ingressgateway-istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: python-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "example.local"
